Fix games being cutoff in iframes

--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ html, body {
 }
 
 #wrapper > * {
-	width: 100%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
